fixed people image distortion on ie

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,6 +65,8 @@
 
 .cd-people-grid {
   margin-bottom: 1.5rem; }
+  .cd-people-grid .cd-grid-item img {
+    width: 100%; }
   .cd-people-grid .cd-grid-item:hover img {
     transform: scale(1.05); }
 
@@ -78,11 +80,10 @@
   max-width: 100%;
   padding: .5rem .25rem;
   transition: all .5s; }
-  .cd-grid-content-person h3, .cd-grid-content-person h4 {
-    color: #fff; }
   .cd-grid-content-person hr {
     margin: .75rem 0; }
   .cd-grid-content-person h3, .cd-grid-content-person h4 {
+    color: #fff;
     margin: 0; }
 
 .h-300 {
