--- a/assets/scss/_people-grid.scss
+++ b/assets/scss/_people-grid.scss
@@ -5,10 +5,10 @@
   margin-bottom: 1.5rem;
 
   .cd-grid-item {
+    img {
+      width: 100%;
+    }
     &:hover {
-      .cd-grid-content-person {
-        
-      }
       img {
         transform: scale(1.05);
       }
@@ -25,27 +25,18 @@
   left: 5px;
   // opacity: 0;
 
-
-  h3, h4 {
-    color: #fff;
-  }
-
   width: calc(100% - 10px);
   max-width: 100%;
   padding: .5rem .25rem;
   transition: all .5s;
-
 
   hr {
     margin: .75rem 0;
   }
 
   h3, h4 {
+  color: #fff;
    margin: 0;
-  }
-
-  @media screen and (min-width: 768px) {
-
   }
 
 }
